--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "pw_workshop_test",
+  "name": "my_pw_workshop_test",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
+  "type": "module",
   "devDependencies": {
     "@playwright/test": "^1.50.1",
-    "@types/node": "^22.13.5"
+    "@types/node": "^22.13.8"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.5.1"
   }
 }
