--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-.idea/
-node_modules/
-playwright-report/
+/.auth/auth.json
+/.idea/
+/node_modules/
+/playwright-report/
 /test-results/
-/blob-report/
-/playwright/.cache/
-.env/
+/.env
